# master-dissertation

./: .gitignore  CMakeLists.txt  main.cpp
Datasets/: btc.csv  temperature.csv
Include/: FFBS.h  MCMC.h  Prior.h
Source/: FFBS.cpp  MCMC.cpp  Prior.cpp
Utility/: CSVLoader.h  Graphics.h
